--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = { version = "0.4.26", features = ["clock"] }
 reqwest = "0.11.18"
-uuid = "1.4.0"
+uuid = { version = "1.4.0", features = ["v4"] }
